<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">PushMessageClient</string>
    <string name="AccountBtn">Account</string>
    <string name="ConnectBtn">Connect</string>
    <string name="SettingBtn">Setting</string>
    <string name="LogoutBtn">Logout</string>
    <string name="ChangeUserbtn">Change User</string>
    <string name="LoginBtn">Login</string>
    <string name="AutoConnectCB">Auto connect</string>
    <string name="app_about">About</string>
    <string name="str_ok">OK</string>
    <string name="label_enable">Enable</string>
    <string name="title_account">Account</string>
    
    <!--###################### button , textview ###################### -->
    <string name="button_connect">Connect a device</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="label_connecting">Connecting...</string>
    <string name="label_connected_to">Connected:</string>
    <string name="label_blank"></string>
    <string name="checkbox_auto_connect">Auto Connect</string>
    
    <!--###################### toast ###################### -->
    <string name="toast_unable_connect">Unable to connect device</string>
    <string name="toast_lost_connect">Lost connection</string>
    <string name="toast_bt_not_available">Bluetooth is not available</string>
    <string name="toast_bt_not_enabled">Bluetooth not enabled</string>    
    <string name="toast_send"> send message to </string>
    <string name="toast_login"> login</string>
    <string name="toast_logout"> logout</string>
    
    <!--###################### Alert dialog ###################### -->
    <string name="msg_confirm_disconnect">Are you sure to disconnect?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    <!-- ###################### Device list activity ###################### -->
    <string name="title_paired_devices">Paired devices</string>
    <string name="title_other_devices">Other devices</string>
    <string name="button_scan">Scan</string>
    <string name="none_paired">none paired</string>
    <string name="scanning">scanning</string>
    <string name="select_device">select device</string>
    <string name="none_found">none found</string>
    <string name="internet_not_found">Internet not found</string>
    <string name="network">Network</string>
    <string name="Start_Wifi">Do you want to start WI-FI ?</string>
    
</resources>
